@@ -4,6 +4,7 @@ Version 3.2.9, released ????-??-??
 - Refactor TestMojo and IntegrationTestMojo to use the common AbstractTestMojo
 - Add ${xp.test.singleInstance} and ${xp.it.singleInstance} to fix Issue #6; default is "false" so a new unittest
   runner instance is spawned for every *.ini file found
+- If PHP reports an invalid [extension_dir] value, try to use [ext] in php.exe directory. See Issue #5.
   (mrosoiu)
 
 
